src/containers/skills/Skills.css
.skills-main-div {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  overflow: hidden;
  margin-bottom: 50px; /* Increased spacing between each skill section */
}

.skills-header {
  font-size: 60px;
  line-height: normal;
  font-family: "Google Sans Regular";
  text-align: center;
}

.skills-text {
  font-size: 20px;
  margin-bottom: 10px; /* Space below each skill description */
}

.skills-text-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px; /* Space below each skill category */
}

.skills-image-div > * {
  max-width: 100%;
  height: auto;
  margin-top: 50px; /* Adjusted top margin for better visual separation */
}

.skills-heading {
  font-size: 56px;
  font-weight: 400;
  font-family: "Google Sans Regular";
  line-height: normal;
  margin-bottom: 20px; /* Space below the heading */
  text-align: center;
}

.skills-subheading {
  font-size: 24px;
  margin-top: 100px;
  margin-bottom: 10px; /* Space below the subheading */
  text-align: center;
}

/* Media Query */
@media (max-width: 1380px) {
  .skills-heading {
    font-size: 40px;
  }
  .skills-header {
    font-size: 50px;
  }
  /* .skills-image-div > img {
    margin-top: 0px;
  } */
}
@media (max-width: 768px) {
  .skills-heading {
    font-size: 30px;
    text-align: center;
  }
  .skills-header {
    font-size: 30px;
  }
  .greeting-text-p {
    font-size: 16px;
    line-height: normal;
  }
  .skills-main-div {
    flex-direction: column;
  }
  .skills-text-div {
    align-items: center;
  }
  .skills-text {
    font-size: 16px;
    text-align: center;
  }
  .skills-text-subtitle {
    font-size: 16px;
    text-align: center;
  }
  .skills-image-div {
    /* display: none; */
    order: 2;
  }
  .skills-image-div > * {
    margin-top: 20px; /* Reduced top margin for images on mobile */
  }
  .skills-subcategory-wrapper {
    flex-direction: column;
    align-items: center;
  }
  .skills-subcategory-container {
    width: 100%;
  }
}

.skills-category {
  margin-bottom: 60px; /* Increased space between categories */
}

.skills-category-title {
  margin-bottom: 30px; /* Increased space between category title and its content */
}

.skills-subcategory {
  margin-bottom: 30px; /* Increased space between subcategories */
}

/* Adjustments for mobile views */
@media (max-width: 768px) {
  .skills-category {
    margin-bottom: 45px; /* Smaller space between categories for mobile */
  }

  .skills-category-title {
    margin-bottom: 22px; /* Smaller space between category title and its content for mobile */
  }

  .skills-subcategory {
    margin-bottom: 22px; /* Smaller space between subcategories for mobile */
  }
}
.skills-subcategory-container {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
  margin-bottom: 20px;
  width: calc(50% - 10px); /* Set width to 50% minus half the gap size to accommodate two containers per row */
  margin-right: 10px; /* Add right margin to create a gap between grid items */
  margin-left: 10px; /* Add left margin to create a gap between grid items */
}

.skills-subcategory-container:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
}

.skills-subcategory-wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px; /* Add gap between containers */
}
.skills-subcategory-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px; /* Add gap between containers */
}

.skills-subcategory-container {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
  margin-bottom: 20px;
  width: 45%; /* Set width to 45% to accommodate two containers per row */
}

.skills-subcategory-container:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
}

